<resources>
    <string name="app_name">MediCalendar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MediCalendar</string>
    <string name="nav_header_subtitle">B01-G01 V 1.0.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_appointment_management">Gestión de Citas</string>
    <string name="menu_medication_management">Gestión  de Medicamentos</string>
    <string name="menu_appointment_history">Historial de Citas</string>
    <string name="menu_sedes">Sedes</string>
    <string name="menu_tutorial">Video Tutorial</string>
    <string name="menu_web">Web</string>
    <string name="msg_bienvenida">Bienvenid@</string>
    <string name="registrar">Registrarse</string>
    <string name="msg_idgrupo">B01-G01 V 1.0.0</string>

    <string name="iniciar_sesion">Ingresar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo">Logo</string>
    <string name="ir">ir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_video">A continuación podras visualizar un video sobre el uso del aplicativo</string>
    <string name="select_document_type">CC</string>
    <string name="nombre_usuario">Pepito</string>
    <string name="apellido_usuario">Perez</string>
    <string name="documento_usuario">1234567890</string>
    <string name="nombrecompleto_usuario">Pepito Perez</string>
    <string name="select_specialty">Seleccionar Especialidad</string>
    <string name="select_doctor">Seleccione el Médico</string>
    <string name="empty_menu" />
</resources>