<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/rounded_contacts_product_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_gestion_citas"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_appointment_management" />
        <item
            android:id="@+id/nav_historial_citas"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_appointment_history" />
        <item
            android:id="@+id/nav_sedes"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_sedes" />
        <item
            android:id="@+id/nav_web"
            android:icon="@drawable/baseline_web_24"
            android:title="@string/menu_web" />
        <item
            android:id="@+id/nav_tutoria"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_tutorial" />
    </group>
</menu>