<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.poligran.medicalendar.ui.inicio.InicioFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.poligran.medicalendar.ui.perfil.ProfileFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_gestion_citas"
        android:name="com.poligran.medicalendar.ui.inicio.InicioFragment"
        android:label="@string/menu_appointment_management"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_historial_citas"
        android:name="com.poligran.medicalendar.ui.historial.HistorialFragment"
        android:label="@string/menu_appointment_history"
        tools:layout="@layout/fragment_historial" />
    <fragment
        android:id="@+id/nav_sedes"
        android:name="com.poligran.medicalendar.ui.gallery.GalleryFragment"
        android:label="@string/menu_sedes"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_web"
        android:name="com.poligran.medicalendar.ui.web.WebFragment"
        android:label="@string/menu_web"
        tools:layout="@layout/fragment_web" />
    <fragment
        android:id="@+id/nav_tutoria"
        android:name="com.poligran.medicalendar.ui.video.VideoFragment"
        android:label="@string/menu_tutorial"
        tools:layout="@layout/fragment_video" />

</navigation>