<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.inicio.InicioFragment"
    android:background="@color/colorMediCalendar"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="8dp"
        android:padding="16dp"
        android:layout_marginHorizontal="50dp"
        android:layout_gravity="center"
        app:cardCornerRadius="25pt">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="219dp"
                android:layout_height="178dp"
                android:layout_margin="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="20dp"
                android:scaleType="centerInside"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo" />

            <TextView
                android:id="@+id/bienvenido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:text="@string/msg_bienvenida"
                android:textSize="24sp"
                android:textColor="@color/colorMediCalendar"/>

            <Button
                android:id="@+id/buttonIniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:layout_marginHorizontal="50dp"
                android:background="@drawable/frame_boton"
                android:text="@string/iniciar_sesion"
                android:elevation="20dp"/>
            <Button
                android:id="@+id/buttonRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/frame_boton"
                android:layout_marginHorizontal="50dp"
                android:text="@string/registrar"
                android:elevation="50dp"
                android:textColor="@color/colorMediCalendar"
                android:theme="@style/Button.White"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/idgrupo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:text="@string/msg_idgrupo"
                android:textSize="8sp"
                android:elevation="20dp"
                android:textColor="@color/colorMediCalendar"
                tools:ignore="SmallSp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>
