<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.perfil.ProfileFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/card_esquinas_inferiores"
            android:elevation="8dp"
            app:cardBackgroundColor="@color/colorMediCalendar">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="30dp">

                <ImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/img_profile"

                    />

                <TextView
                    android:id="@+id/profileNameView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profileImageView"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/nombrecompleto_usuario" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombres">
            <!-- Campo de texto para el nombre -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profileNameView"
                android:layout_marginTop="16dp"
                android:enabled="false"
                android:hint="Nombres"
                android:text="@string/nombre_usuario" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Apellidos">
            <!-- Campo de texto para el apellido -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/firstNameEditText"
                android:layout_marginTop="8dp"
                android:enabled="false"
                android:hint="Apellido"
                android:text="@string/apellido_usuario" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Tipo de documento">
            <!-- Selector para el tipo de documento -->
            <Spinner
                android:id="@+id/documentTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lastNameEditText"
                android:layout_marginTop="8dp"
                android:entries="@array/document_types"
                android:prompt="@string/select_document_type" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Número de documento">
            <!-- Campo de texto para el número de documento -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/documentNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/documentTypeSpinner"
                android:layout_marginTop="8dp"
                android:enabled="false"
                android:hint="Número de documento"
                android:inputType="number"
                android:text="@string/documento_usuario" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Fecha de nacimiento">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fechaEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                android:onClick="showDatePicker"
                android:text="12/12/2002" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</FrameLayout>
